--- a/my_app/package.json
+++ b/my_app/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test"
   },
   "eslintConfig": {
