--- a/my_app/package.json
+++ b/my_app/package.json
@@ -10,8 +10,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "react-stars": "^2.2.5",
     "web-vitals": "^1.1.2"
-    
   },
   "scripts": {
     "start": "react-scripts start",
