--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^6.1.1",
     "multer": "^1.4.4"
   },
   "devDependencies": {
+    "eslint": "^8.4.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
