--- a/my_app/package.json
+++ b/my_app/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.6.5",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "semantic-ui-react": "^2.0.4",
